--- a/Users.css
+++ b/Users.css
@@ -1,9 +1,9 @@
-/* BOSS
+/* OWNER
 -------------------------------------------------------------------------------*/
-#user-lists .list .user.id-3896066 .name:after,
-#user-rollover.id-3896066 .meta .username:after,
-#chat [data-cid^='3896066-'] .un:after {
-    content: "BOSS";
+#user-lists .list .user.id- 3669054 .name:after,
+#user-rollover.id- 3669054 .meta .username:after,
+#chat [data-cid^=' 3669054-'] .un:after {
+    content: "OWNER";
     margin-left: 5px;
     background: rgba(0,0,0,.3);
     padding: 0px 5px;
@@ -13,34 +13,24 @@
     font-size: 10px;
 }
 
-/*===================================== Naudotojo valdyba */
-#user-rollover.id-3896066 .meta .thumb {
+/*=====================================*/
+#user-rollover.id-3669054 .meta .thumb {
     border-color: rgba(206,10,10,.8) !important;
 }
 
-
-
-
-/*Akira Luna*/
-[data-cid^="4652147"].cm .msg .from .un, #user-lists .list .role-manager.id-4652147 .name {
+/*xUndisputed*/
+[data-cid^="3669054"].cm .msg .from .un, #user-lists .list .role-manager.id-4652147 .name {
   color: rgba(244, 0, 188, 1) !important;
 }
-
-
-
-
-
-
 
 /* Developer
 -------------------------------------------------------------------------------*/
 
-
-/* Domas */
-#user-lists .list .user.id-6310947 .name:after,
-#user-rollover.id-6310947 .meta .username:after,
-#chat [data-cid^='6310947-'] .un:after {
-    content: "DEV";
+/* xUndisputed */
+#user-lists .list .user.id-3669054 .name:after,
+#user-rollover.id-3669054 .meta .username:after,
+#chat [data-cid^='3669054-'] .un:after {
+    content: "DEV/CSS/THEME";
     margin-left: 5px;
     background: rgba(0,0,0,.3);
     padding: 0px 5px;
@@ -50,30 +40,23 @@
     font-size: 8px;
 }
 
-/*===================================== Programuotojas */
-#user-rollover.id-6310947 .meta .thumb {
+/*===================================== #TM l Bot */
+#user-rollover.id-20168147 .meta .thumb {
     border-color: #f2a207 !important;
 }
 
-
-
-
-
-
-
-
-#user-rollover.is-staff.id-31911880 .info .role span {
+#user-rollover.is-staff.id- 20168147 .info .role span {
     display: none;
 }
 
-#user-rollover.31911880 .level:after {
+#user-rollover. 20168147 .level:after {
     position: absolute;
     content: url('http://i.imgur.com/xa4FR0w.png');
     left: 170px;
     top: 3px;
 }
 
-#user-rollover.id-31911880 .info .badge-box:after {
+#user-rollover.id- 20168147 .info .badge-box:after {
     content: "Chatbot";
     position: absolute;
     top: 6px;
@@ -83,19 +66,19 @@
     font-size: 13px;
 }
 
-#user-rollover.id-31911880 .info .role i {
+#user-rollover.id- 20168147 .info .role i {
   display: none;
 }
 
 /* BOT */
-#chat-messages [data-cid^="31911880-"] .timestamp,
-#chat [data-cid^="31911880-"].emote .timestamp {
+#chat-messages [data-cid^=" 20168147-"] .timestamp,
+#chat [data-cid^=" 20168147-"].emote .timestamp {
     color: #ff9679 !important;
 }
 
-#user-lists .list .user.id-31911880 .name:after,
-#user-rollover.id-31911880 .meta .username:after,
-#chat [data-cid^='31911880-'] .un:after {
+#user-lists .list .user.id-20168147 .name:after,
+#user-rollover.id-20168147 .meta .username:after,
+#chat [data-cid^='20168147-'] .un:after {
     content: "BOT";
     margin-left: 5px;
     background: rgba(0,0,0,.3);
@@ -106,88 +89,70 @@
     font-size: 8px;
 }
 
-#chat [data-cid^="31911880-"].message .timestamp {
+#chat [data-cid^="20168147-"].message .timestamp {
     color: #ff9679 !important;
 }
 
-#chat [data-cid^="31911880-"] .icon,
+#chat [data-cid^="20168147-"] .icon,
 #chat .id-31911880 .icon {
     display: none !important;
 }
 
-#user-rollover.id-31911880 .username,
-#user-lists .list .user.id-31911880 .name,
-#user-rollover.id-31911880 .username,
-#chat [data-cid^='31911880-'] .un {
+#user-rollover.id-20168147 .username,
+#user-lists .list .user.id-20168147 .name,
+#user-rollover.id-20168147 .username,
+#chat [data-cid^='20168147-'] .un {
     color: #ff9679 !important;
 }
 
-#chat-messages [data-cid^="31911880-"] .text {
+#chat-messages [data-cid^="20168147-"] .text {
     font-weight: bold;
 }
 
-#chat-messages [data-cid^="31911880-"] .msg {
+#chat-messages [data-cid^="20168147-"] .msg {
     font-weight: bold;
 }
 
-#chat [data-cid^='31911880-'] {
+#chat [data-cid^='20168147-'] {
   background: transparent;
   box-shadow: inset 0 1.5px 0 rgba(157, 150, 121,.3), inset 0 -1.5px 0 rgba(157, 150, 121,.3);
 }
 
-#chat [data-cid^='31911880-'] .from {
+#chat [data-cid^='20168147-'] .from {
   background: linear-gradient(to right, rgba(157, 150, 121,.3), transparent);
   padding: 3px 0 3px 10px;
   border-radius: 10px 0 0 10px;
 }
 
+/*============xUndisputed============* Badge
 
-
-
-
-
-
-
-
-
-/*============-Mr. Ruthless============* Badge
-
-
- /* -Mr. Ruthless */
-#chat-messages .id-3896066 .badge-box i.bdg
+ /* xUndisputed */
+#chat-messages .id-3669054 .badge-box i.bdg
 {
-        background-image:       url('https://i.imgur.com/o47RXle.png');
-        background-size:        cover;
+        background-image: url('https://i.imgur.com/o47RXle.png');
+        background-size: cover;
 }
 
-#user-rollover.id-3896066 .info .badge-box .bdg {
+#user-rollover.id-3669054 .info .badge-box .bdg {
 	background: url(https://i.imgur.com/o47RXle.png)
         center no-repeat!important;
 }
 
+/*============#TM l Bot============* Badge
 
-
-
-/*============Domas============* Badge
-
-
- /* Domas */
-#chat-messages .id-6310947 .badge-box i.bdg
+ /* #TM l Bot */
+#chat-messages .id-20168147 .badge-box i.bdg
 {
         background-image:       url('https://i.imgur.com/rc86p1s.gif');
         background-size:        cover;
 }
 
-#user-rollover.id-6310947 .info .badge-box .bdg {
+#user-rollover.id-20168147 .info .badge-box .bdg {
 	background: url(https://i.imgur.com/rc86p1s.gif)
         center no-repeat!important;
 }
 
-
-
-
 /*============silent============* Badge
-
 
  /* silent */
 #chat-messages .id-17826818 .badge-box i.bdg
@@ -201,11 +166,7 @@
         center no-repeat!important;
 }
 
-
-
-
 /*============-karolite_liudeselis============* Badge
-
 
  /* -karolite_liudeselis */
 #chat-messages .id-6381024 .badge-box i.bdg
@@ -219,11 +180,7 @@
         center no-repeat!important;
 }
 
-
-
-
 /*============Rudeninė Pandutė============* Badge
-
 
  /* Rudeninė Pandutė */
 #chat-messages .id-4133404 .badge-box i.bdg
@@ -237,11 +194,7 @@
         center no-repeat!important;
 }
 
-
-
-
 /*============-Tomyoo============* Badge
-
 
  /* -Tomyoo */
 #chat-messages .id-3635634 .badge-box i.bdg
@@ -255,11 +208,7 @@
         center no-repeat!important;
 }
 
-
-
-
 /*============-Antitė============* Badge
-
 
  /* -Antitė */
 #chat-messages .id-28854785 .badge-box i.bdg
@@ -273,11 +222,7 @@
         center no-repeat!important;
 }
 
-
-
-
 /*============-BlackWhiteTiger============* Badge
-
 
  /* -BlackWhiteTiger */
 #chat-messages .id-3721161 .badge-box i.bdg
@@ -291,11 +236,7 @@
         center no-repeat!important;
 }
 
-
-
-
 /*============Pandele-============* Badge
-
 
  /* Pandele- */
 #chat-messages .id-4281529 .badge-box i.bdg
@@ -308,12 +249,8 @@
 	background: url(https://i.imgur.com/tZ47sGw.jpg)
         center no-repeat!important;
 }
-
-	
-	
 	
 /*============Slibins============* Badge
-
 
  /* Slibins */
 #chat-messages .id-4117028 .badge-box i.bdg
@@ -327,11 +264,7 @@
         center no-repeat!important;
 }
 
-
-
-
 /*============-Anti-Sociopatai============* Badge
-
 
  /* -Anti-Sociopatai */
 #chat-messages .id-31911880 .badge-box i.bdg
@@ -345,11 +278,7 @@
         center no-repeat!important;
 }
 
-
-
-
 /*============Ratas Ir Kvadratas============* Badge
-
 
  /* Ratas Ir Kvadratas */
 #chat-messages .id-3554636 .badge-box i.bdg
@@ -363,11 +292,7 @@
         center no-repeat!important;
 }
 
-
-
-
 /*============- Sheriff============* Badge
-
 
  /* - Sheriff */
 #chat-messages .id-3611882 .badge-box i.bdg
@@ -380,15 +305,3 @@
 	background: url(https://i.imgur.com/iNOAqrX.png)
         center no-repeat!important;
 }
-
-
-
-
-
-
-
-
-
-
-
-
