--- a/Custom PP.css
+++ b/Custom PP.css
@@ -1,7 +1,7 @@
 
 /* icon */
 .icon {
-  background-image: url("https://theme.edm-and-indie.com/@/imagens/todos-iconesv1.png");
+  background-image: url("");
 }
 
 /* app */
