--- a/New/TM.css
+++ b/New/TM.css
@@ -23,3 +23,13 @@
 }
 
 /* Ranks */
+
+/* rcs */
+#rcs-style-anchor-1 {
+    display: none;
+
+/* snow */
+#checkbox-snow {
+    display: none;
+    
+    
