--- a/UNM.css
+++ b/UNM.css
@@ -11,3 +11,5 @@
 @import url("https://rawgit.com/xUndisputed/UNMCSs/master/Theme");
 @import url("https://rawgit.com/xUndisputed/UNMCSs/master/New/UNM.css");
 @import url("https://rawgit.com/xUndisputed/UNMCSs/master/Rank/Roles");
+@import url("https://rawgit.com/xUndisputed/UNMCSs/master/Sponsor.css");
+
