--- a/Bot.css
+++ b/Bot.css
@@ -10,7 +10,7 @@
 }
 
 #user-rollover.id-20168147 .info .badge-box:after {
-    content: "UGMBot";
+    content: "UNMBot";
     position: absolute;
     top: 6px;
     left: 228px;
@@ -32,9 +32,9 @@
 #user-lists .list .user.id-20168147 .name:after, #user-rollover.id-20168147 .meta .username:after, #chat [data-cid^='20168147-'] .un:after {
     content: "BOT";
     margin-left: 5px;
-    background: rgba(0,0,0,.3);
+    background: rgba(255,25,25,.5);
     padding: 0px 5px;
-    border: 1px solid rgba(172, 118, 255,.3);
+    border: 1px solid rgba(255, 50, 50,.5);
     border-radius: 5px;
     color: #ac76ff;
     font-size: 10px;
