--- a/Bot.css
+++ b/Bot.css
@@ -14,7 +14,7 @@
     position: absolute;
     top: 6px;
     left: 228px;
-    color: #ac76ff;
+    color: #6400ff;
     font-weight: bold;
     font-size: 13px;
 }
@@ -26,7 +26,7 @@
 /* BOT */
 
 #chat-messages [data-cid^="20168147-"] .timestamp, #chat [data-cid^="20168147-"].emote .timestamp {
-    color: #ac76ff ;
+    color: #6400ff;
 }
 
 #user-lists .list .user.id-20168147 .name:after, #user-rollover.id-20168147 .meta .username:after, #chat [data-cid^='20168147-'] .un:after {
@@ -36,20 +36,20 @@
     padding: 0px 5px;
     border: 1px solid rgba(255, 50, 50,.5);
     border-radius: 5px;
-    color: #ac76ff;
+    color: #6400ff;
     font-size: 10px;
 }
 
 #chat [data-cid^="20168147-"].message .timestamp {
-    color: #ac76ff ;
+    color: #6400ff;
 }
 
 #chat [data-cid^="20168147-"] .icon, #chat .id-19129619 .icon {
-    display: none ;
+    display: none;
 }
 
 #user-rollover.id-20168147 .username, #user-lists .list .user.id-20168147 .name, #user-rollover.id-20168147 .username, #chat [data-cid^='20168147-'] .un {
-    color: #ac76ff ;
+    color: #6400ff;
 }
 
 #chat-messages [data-cid^="20168147-"] .text {
@@ -62,11 +62,11 @@
 
 #chat [data-cid^='20168147-'] {
     background: transparent;
-    box-shadow: inset 0 1.5px 0 rgba(172, 118, 255,.3), inset 0 -1.5px 0 rgba(172, 118, 255,.3);
+    box-shadow: inset 0 1.5px 0 rgba(25, 25, 255,.5), inset 0 -1.5px 0 rgba(25, 25, 255,.5);
 }
 
 #chat [data-cid^='20168147-'] .from {
-    background: linear-gradient(to right, rgba(172, 118, 255,.3), transparent);
+    background: linear-gradient(to right, rgba(25, 25, 255,.5), transparent);
     padding: 3px 0 3px 10px;
     border-radius: 10px 0 0 10px;
 }
