--- a/Owner.css
+++ b/Owner.css
@@ -7,22 +7,22 @@
 }
 
 #chat-messages [data-cid^="3669054-"] .timestamp, #chat [data-cid^="3669054-"].emote .timestamp {
-    color: #00e600 ;
+    color: #ff0000;
 }
 
 #user-lists .list .user.id-3669054 .name:after, #user-rollover.id-3669054 .meta .username:after, #chat [data-cid^='3669054-'] .un:after {
-    content: "DEV/CSS/THEME";
+    content: "DEV/CSS/THEME/CODING";
     margin-left: 5px;
-    background: rgba(0,0,0,.3);
+    background: rgba(255,25,25,.5);
     padding: 0px 5px;
-    border: 1px solid rgba(172, 118, 255,.3);
+    border: 1px solid rgba(255, 25, 25,.9);
     border-radius: 5px;
-    color: #00e600;
+    color: #ff0000;
     font-size: 10px;
 }
 
 #chat [data-cid^="3669054-"].message .timestamp {
-    color: #00e600 ;
+    color: #ff0000;
 }
 
 #chat [data-cid^="3669054-"] .icon, #chat .id-3669054 .icon {
@@ -30,7 +30,7 @@
 }
 
 #user-rollover.id-3669054 .username, #user-lists .list .user.id-3669054 .name, #user-rollover.id-3669054 .username, #chat [data-cid^='3669054-'] .un {
-    color: #00e600 ;
+    color: #ff0000;
 }
 
 #chat-messages [data-cid^="3669054-"] .text {
@@ -43,11 +43,11 @@
 
 #chat [data-cid^='3669054-'] {
     background: transparent;
-    box-shadow: inset 0 1.5px 0 rgba(172, 118, 255,.3), inset 0 -1.5px 0 rgba(172, 118, 255,.3);
+    box-shadow: inset 0 1.5px 0 rgba(255, 25, 25,.5), inset 0 -1.5px 0 rgba(255, 25, 25,.5);
 }
 
 #chat [data-cid^='3669054-'] .from {
-    background: linear-gradient(to right, rgba(172, 118, 255,.3), transparent);
+    background: linear-gradient(to right, rgba(255, 25, 25,.5), transparent);
     padding: 3px 0 3px 10px;
     border-radius: 10px 0 0 10px;
 }
