--- a/Sponsor.css
+++ b/Sponsor.css
@@ -1,1 +1,9 @@
+/* AlexHEstonia */
+#user-rollover.id-5814594 .info .role span:after {
+    content: ' / SPONSOR';
+}
 
+/* blacksprun */
+#user-rollover.id-5489257 .info .role span:after {
+    content: ' / SPONSOR';
+}
