--- a/Custom.css
+++ b/Custom.css
@@ -53,7 +53,7 @@
 #room-settings .general-settings .welcome:after {
     text-align: center;
     position: absolute;
-    content: "Copyright © 2017-2018 🎧 UltraNightMusic #UNM 🎧";
+    content: "Copyright © 2017-2018 #SquadColdLava";
     margin-top: 150px;
     left: 40.5%
 ;
@@ -85,9 +85,9 @@
     font-size: 11px;
     width: 300px;
     box-sizing: border-box;
-    content: "xUndisputed | MVP's PlugThemed - Red: V 1.5!";
+    content: "#SquadColdLava | PlugThemed - Red: V 1.8!";
     font-weight: bold;
     padding: 5px;
-    background-color: rgb(255, 25, 25);
+    background-color: rgb(255, 10, 10);
     border-radius: 20px;
 }
