--- a/Custom PP.css
+++ b/Custom PP.css
@@ -1,3 +1,4 @@
 dj-booth {
-    background: 26px 146px url('http://i.imgur.com/Rqdti0u.png%27) no-repeat; /* We provided you an example booth image, but feel free to change it! */
+    background: 26px 146px url('http://i.imgur.com/Rqdti0u.png%27) no-repeat;
+        /* We provided you an example booth image, but feel free to change it! */
 }
