--- a/Custom PP.css
+++ b/Custom PP.css
@@ -1,4 +1,4 @@
 dj-booth {
-    background: 26px 146px url('https://i.imgur.com/Rqdti0u.png) no-repeat;
+    background: 26px 146px url('https://i.imgur.com/Rqdti0u.png') no-repeat;
         /* We provided you an example booth image, but feel free to change it! */
 }
