--- a/SCL.css
+++ b/SCL.css
@@ -1,15 +1,16 @@
-@import url("https://rawgit.com/xUndisputed/SCLCss/master/Users.css");
-@import url("https://rawgit.com/xUndisputed/SCLCss/master/Staff.css");
 @import url("https://rawgit.com/xUndisputed/SCLCss/master/Bot.css");
-@import url("https://rawgit.com/xUndisputed/SCLCss/master/Supporters.css");
-@import url("https://rawgit.com/xUndisputed/SCLCss/master/Developer.css");
-@import url("https://rawgit.com/xUndisputed/SCLCss/master/Owner.css");
-@import url("https://rawgit.com/xUndisputed/SCLCss/master/Vip.css");
 @import url("https://rawgit.com/xUndisputed/SCLCss/master/Custom%20PP.css");
 @import url("https://rawgit.com/xUndisputed/SCLCss/master/Custom.css");
-@import url("https://rawgit.com/xUndisputed/SCLCss/master/WAM.css");
-@import url("https://rawgit.com/xUndisputed/SCLCss/master/Theme");
-@import url("https://rawgit.com/xUndisputed/SCLCss/master/New/SCL.css");
-@import url("https://rawgit.com/xUndisputed/SCLCss/master/Rank/Roles");
+@import url("https://rawgit.com/xUndisputed/SCLCss/master/Developer.css");
+@import url("https://rawgit.com/xUndisputed/SCLCss/master/Owner.css");
+@import url("https://rawgit.com/xUndisputed/SCLCss/master/SCL.css");
+@import url("https://rawgit.com/xUndisputed/SCLCss/master/SCL.json");
 @import url("https://rawgit.com/xUndisputed/SCLCss/master/Sponsor.css");
+@import url("https://rawgit.com/xUndisputed/SCLCss/master/Staff.css");
+@import url("https://rawgit.com/xUndisputed/SCLCss/master/Supporters.css");
+@import url("https://rawgit.com/xUndisputed/SCLCss/master/Theme");
+@import url("https://rawgit.com/xUndisputed/SCLCss/master/Users.css");
+@import url("https://rawgit.com/xUndisputed/SCLCss/master/Vip.css");
+@import url("https://rawgit.com/xUndisputed/SCLCss/master/WAM.css");
+
 
