--- a/Custom.css
+++ b/Custom.css
@@ -5,7 +5,7 @@
 #room-settings .general-settings .welcome:after {
     text-align: center;
     position: absolute;
-    content: "Copyright © 2017-2018 #SquadColdLava";
+    content: "Copyright © 2017-2018 ☯F E A R F O X Y☯™";
     margin-top: 150px;
     left: 40.5%;
 }
@@ -21,7 +21,7 @@
     font-size: 11px;
     width: 300px;
     box-sizing: border-box;
-    content: "#SquadColdLava | PlugThemed - Blue: V 2.1.3!";
+    content: "☯F E A R F O X Y☯™ | PlugThemed - Blue: V 2.2.6!";
     font-weight: bold;
     padding: 5px;
     background-color: rgb(50, 50, 225);
