--- a/Custom PP.css
+++ b/Custom PP.css
@@ -1,3 +1,3 @@
 dj-booth {
-    background: url("https://i.imgur.com/Rqdti0u.png") 26px 146px no-repeat;
+    background: url("") 26px 146px no-repeat;
 }
