--- a/Custom.css
+++ b/Custom.css
@@ -1,13 +1,9 @@
 /*--------------------------------------------------------------------------------\
-|		Room Settings
+|		chat Settings
  \--------------------------------------------------------------------------------*/
 
-#room-settings .general-settings .welcome:after {
-    text-align: center;
-    position: absolute;
-    content: "Copyright © 2017-2018 ☯F E A R F O X Y☯™";
-    margin-top: 150px;
-    left: 40.5%;
+#chat .badge-box i { 
+    transform: scale(1); 
 }
 
 /*--------------------------------------------------------------------------------\
