--- a/Promoter.css
+++ b/Promoter.css
@@ -13,7 +13,7 @@
 }
 
 #user-rollover.is-promoter.id-3669054 .info .role span {
-  background-image: url(https://i.imgur.com/a2zR8CP.png) !important;
+  background-image: url("https://i.imgur.com/a2zR8CP.png") !important;
   background-repeat: no-repeat;
   position: absolute;
   margin: -20px 0px 0px 0140px !important;
@@ -26,7 +26,7 @@
 } 
   #user-rollover.id-3669054 .level:before {
   position: absolute;
-  background-image: url(https://i.imgur.com/a2zR8CP.png);
+  background-image: url("https://i.imgur.com/a2zR8CP.png");
   background-repeat: no-repeat;
   content: "Host";
   display: inline-block;
