--- a/FFY.css
+++ b/FFY.css
@@ -10,5 +10,4 @@
 @import url("https://rawgit.com/xUndisputed/FFYCss/master/Users.css");
 @import url("https://rawgit.com/xUndisputed/FFYCss/master/Vip.css");
 @import url("https://rawgit.com/xUndisputed/FFYCss/master/WAM.css");
-
-
+@import url("https://rawgit.com/xUndisputed/FFYCss/master/Promoter.css");
