--- a/FFY.css
+++ b/FFY.css
@@ -6,7 +6,7 @@
 @import url("https://rawgit.com/xUndisputed/FFYCss/master/Sponsor.css");
 @import url("https://rawgit.com/xUndisputed/FFYCss/master/Staff.css");
 @import url("https://rawgit.com/xUndisputed/FFYCss/master/Supporters.css");
-@import url("https://rawgit.com/xUndisputed/FFYCss/master/Theme");
+@import url("https://rawgit.com/xUndisputed/FFYCss/master/Theme.css");
 @import url("https://rawgit.com/xUndisputed/FFYCss/master/Users.css");
 @import url("https://rawgit.com/xUndisputed/FFYCss/master/Vip.css");
 @import url("https://rawgit.com/xUndisputed/FFYCss/master/WAM.css");
