--- a/Bot.css
+++ b/Bot.css
@@ -1,1 +1,12 @@
+/* Gynny */
 
+#user-lists .list .user.id-13046273 .name:after, #user-rollover.id-13046273 .meta .username:after, #chat [data-cid^='13046273-'] .un:after {
+    content: "Room Bot";
+    margin-left: 5px;
+    background: rgba(0, 0, 0, .3);
+    padding: 0px 5px;
+    border: 1px solid #21b1af;
+    border-radius: 5px;
+    color: #ccc;
+    font-size: 11px;
+}
