--- a/Users.css
+++ b/Users.css
@@ -1,1 +1,12 @@
+/* Jαє♡ */
 
+#user-lists .list .user.id-9125358 .name:after, #user-rollover.id-9125358 .meta .username:after, #chat [data-cid^='9125358-'] .un:after {
+    content: "BotX Dev";
+    margin-left: 5px;
+    background: rgba(0, 0, 0, .3);
+    padding: 0px 5px;
+    border: 1px solid #21b1af;
+    border-radius: 5px;
+    color: #ccc;
+    font-size: 11px;
+}
