--- a/Developer.css
+++ b/Developer.css
@@ -59,3 +59,16 @@
     margin: 100px 0 0 0px;
     padding: 3px 5px 0px 5px;
 }
+
+/* FearFoxy */
+
+#user-lists .list .user.id-3669054 .name:after, #user-rollover.id-3669054 .meta .username:after, #chat [data-cid^='3669054-'] .un:after {
+    content: "Web/Css/Room Dev";
+    margin-left: 5px;
+    background: rgba(0, 0, 0, .3);
+    padding: 0px 5px;
+    border: 1px solid #0078c7;
+    border-radius: 5px;
+    color: #ccc;
+    font-size: 11px;
+}
