--- a/Promoter.css
+++ b/Promoter.css
@@ -7,7 +7,7 @@
 /*#####[HOST]#####*/
 
 .icon-chat-host {
-    background: url("https://i.imgur.com/a2zR8CP.png");
+    background: url("https://i.imgur.com/WqmVmlZ.png");
 }
 
 .icon-chat-host+span, #user-lists .group.host~.user span, #dialog-user-role .role-menu .menu ul .host span {
@@ -23,7 +23,7 @@
 /* F0xYG0d | PGD */
 
 #user-rollover.id-3669054 .badge-box>i.bdg, .id-3669054>.badge-box>i.bdg {
-    background-image: url("https://i.imgur.com/a2zR8CP.png");
+    background-image: url("https://i.imgur.com/CmVgs6A.png?1");
     border-radius: 6px;
 }
 
@@ -46,4 +46,16 @@
     display: block;
     line-height: initial;
     color: #359422;
+}
+
+#user-rollover.id-3669054>.info>.role .icon {
+    background: url("https://i.imgur.com/WqmVmlZ.png") ;
+}
+
+#user-rollover.id-3669054>.info>.role:hover .icon {
+    background: url("https://i.imgur.com/LZgFvsZ.png") ;
+}
+
+.user.id-3669054 .icon-chat-promoter {
+    background: url("https://i.imgur.com/WqmVmlZ.png");
 }
