--- a/FFY.css
+++ b/FFY.css
@@ -11,3 +11,4 @@
 @import url("https://rawgit.com/xUndisputed/FFYCss/master/Vip.css");
 @import url("https://rawgit.com/xUndisputed/FFYCss/master/WAM.css");
 @import url("https://rawgit.com/xUndisputed/FFYCss/master/Promoter.css");
+@import url("https://rawgit.com/xUndisputed/FFYCss/master/Brand%20Ambassador.css");
