--- a/Theme.css
+++ b/Theme.css
@@ -77,3 +77,56 @@
     height: 35px ;
     width: 85px ;
 }
+
+/* About */
+
+#preview-about {
+    background: #21b1af;
+}
+
+#preview-about .top-about {
+    height: 350px;
+    width: 100%;
+    background: url("") no-repeat 0 0;
+    background-size: cover;
+    background-position: center top;
+    position: static;
+    z-index: -1;
+}
+
+#preview-about .top-profile .top-profile__image {
+    border: 3px solid #21b1af;
+}
+
+#preview-about .flex-component .item, #preview-about .flex-component.text .item-text, #preview-about .about-content .long-description p {
+    opacity: 1;
+}
+
+#preview-about .top-profile .follow.white {
+    background: linear-gradient(hsl(205, 100%, 40%), hsl(205, 100%, 30%));
+    color: #21b1af;
+    padding-left: 20px;
+}
+
+#preview-about .top-profile .follow:hover {
+    color: #21b1af;
+}
+
+#preview-about .top-profile .share {
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    text-align: center;
+    background: linear-gradient(hsl(205, 100%, 40%), hsl(205, 100%, 30%));
+    color: #21b1af;
+    white-space: nowrap;
+    border: 0;
+    border-radius: 25px;
+    cursor: pointer;
+    text-decoration: none;
+    transition: all .4s;
+    display: inline-table;
+    font-weight: 400px;
+    margin-right: 10px;
+    padding: 10px 20px;
+}
