--- a/Promoter.css
+++ b/Promoter.css
@@ -23,7 +23,7 @@
 /* F0xYG0d | PGD */
 
 #user-rollover.id-3669054 .badge-box>i.bdg, .id-3669054>.badge-box>i.bdg {
-    background-image: url("https://i.imgur.com/CmVgs6A.png?1");
+    background-image: url("https://i.imgur.com/OfxuKsE.png?1");
     border-radius: 6px;
 }
 
