--- a/Theme.css
+++ b/Theme.css
@@ -196,3 +196,13 @@
 .plug-tab-menu .item, .plug-tab-menu .item:last-child {
     width: 100%;
 }
+
+#user-rollover .action {
+    background: radial-gradient(hsla(0, 0%, 10%, 0.9), hsla(0, 0%, 0%, 0.9)) ;
+    box-shadow: 0 0 2px 1px #21b1af;
+}
+
+#user-rollover .action:hover {
+    background: radial-gradient(hsla(225, 100%, 30%, 0.9), hsla(225, 100%, 20%, 0.9)) ;
+    box-shadow: inset 0 0 50px #000 ;
+}
