--- a/Custom.css
+++ b/Custom.css
@@ -23,3 +23,12 @@
     background-color: rgb(50, 50, 225);
     border-radius: 20px;
 }
+
+/*--------------------------------------------------------------------------------\
+|		chat welcome
+ \--------------------------------------------------------------------------------*/
+
+#chat .cm.welcome {
+    color: hsl(225, 80%, 60%);
+    box-shadow: inset 0 0 0 1px hsl(50, 50%, 30%);
+}
