--- a/Custom.css
+++ b/Custom.css
@@ -25,7 +25,7 @@
 }
 
 /*--------------------------------------------------------------------------------\
-|		chat welcome
+|		welcome & log
  \--------------------------------------------------------------------------------*/
 
 #chat .cm.welcome {
