--- a/Custom.css
+++ b/Custom.css
@@ -32,3 +32,16 @@
     color: hsl(225, 80%, 60%);
     box-shadow: inset 0 0 0 1px hsl(50, 50%, 30%);
 }
+
+#chat .log {
+    background: linear-gradient(hsla(225, 30%, 20%, 0.8), hsla(225, 30%, 15%, 0.8)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 100%, 0.8)) ;
+    box-shadow: inset 0 -1px 1px hsla(225, 30%, 10%, 0.8);
+}
+
+.cm strong {
+    color: #21b1af;
+}
+
+.cm em {
+    color: #21b1af;
+}
