--- a/Users.css
+++ b/Users.css
@@ -76,3 +76,17 @@
     color: #ccc;
     font-size: 11px;
 }
+
+
+/* Bloom */
+
+#user-lists .list .user.id-3148591 .name:after, #user-rollover.id-3148591 .meta .username:after, #chat [data-cid^='3148591-'] .un:after {
+    content: "Helper/Best Ba";
+    margin-left: 5px;
+    background: rgba(0, 0, 0, .3);
+    padding: 0px 5px;
+    border: 1px solid #21b1af;
+    border-radius: 5px;
+    color: #ccc;
+    font-size: 11px;
+}
