--- a/Users.css
+++ b/Users.css
@@ -155,3 +155,16 @@
     color: #ccc;
     font-size: 11px;
 }
+
+/* mauricevdam */
+
+#user-lists .list .user.id-6566146 .name:after, #user-rollover.id-6566146 .meta .username:after, #chat [data-cid^='6566146-'] .un:after {
+    content: "Helper";
+    margin-left: 5px;
+    background: rgba(0, 0, 0, .3);
+    padding: 0px 5px;
+    border: 1px solid #21b1af;
+    border-radius: 5px;
+    color: #ccc;
+    font-size: 11px;
+}
