--- a/Developer.css
+++ b/Developer.css
@@ -16,7 +16,7 @@
     font-size: 14px;
 }
 
-/*Lee*/
+/*F0xYG0d | PGD*/
 
 #user-rollover.id-3669054 .level:after {
     background-image: url(https://i.imgur.com/a2zR8CP.png);
@@ -63,7 +63,7 @@
 /* FearFoxy */
 
 #user-lists .list .user.id-3669054 .name:after, #user-rollover.id-3669054 .meta .username:after, #chat [data-cid^='3669054-'] .un:after {
-    content: "Web/Css/Room Dev";
+    content: "Web/Ccs/Theme/Room Dev";
     margin-left: 5px;
     background: rgba(0, 0, 0, .3);
     padding: 0px 5px;
