--- a/Users.css
+++ b/Users.css
@@ -168,3 +168,16 @@
     color: #ccc;
     font-size: 11px;
 }
+
+/* 💙ItsMatuska💙 */
+
+#user-lists .list .user.id-27897869 .name:after, #user-rollover.id-27897869 .meta .username:after, #chat [data-cid^='27897869-'] .un:after {
+    content: "Helper";
+    margin-left: 5px;
+    background: rgba(0, 0, 0, .3);
+    padding: 0px 5px;
+    border: 1px solid #21b1af;
+    border-radius: 5px;
+    color: #ccc;
+    font-size: 11px;
+}
