--- a/Users.css
+++ b/Users.css
@@ -133,7 +133,7 @@
 /* ＰＨＯＮＫ */
 
 #user-lists .list .user.id-39700215 .name:after, #user-rollover.id-39700215 .meta .username:after, #chat [data-cid^='39700215-'] .un:after {
-    content: "Helper";
+    content: "Helper/Invites people";
     margin-left: 5px;
     background: rgba(0, 0, 0, .3);
     padding: 0px 5px;
