--- a/Custom PP.css
+++ b/Custom PP.css
@@ -42,3 +42,17 @@
   from {opacity: 0;};
   to {opacity: 1;};
 }    
+
+@keyframes example {
+	0%   {color: #ff1313;}
+	20%  {color: #ff9936;}
+	40%  {color: #ffe132;}
+	60% {color: #11c300;}
+	80% {color: #0b40e7;}
+	100% {color: #ff1313;}
+}
+.btn-like.clicked {
+	animation-name: example;
+	animation-duration: 10s;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
