--- a/Brand Ambassador.css
+++ b/Brand Ambassador.css
@@ -7,7 +7,7 @@
 /* Bloom <3 */
 
 #user-rollover.id-3148591 .badge-box>i.bdg, .id-3148591>.badge-box>i.bdg {
-    background-image: url("https://i.imgur.com/qyXFcl5.gif");
+    background-image: url("");
     border-radius: 6px;
 }
 
