--- a/Theme.css
+++ b/Theme.css
@@ -1,11 +1,7 @@
 #rcs-style-anchor-2 {
     background-color: rgba(0, 0, 0, 0.9) ;
-    border-radius: 10px ;
-    border: 1px solid;
-    animation-name: example;
-    animation-duration: 15s;
-    animation-iteration-count: infinite;
-    position: absolute;
+    border-radius: 10px;
+    border: 3px solid #ff0000;
     top: 55px;
     left: 55px;
     z-index: 9;
@@ -42,12 +38,9 @@
 
 #rcs-style-anchor-1 {
     background-color: rgba(0, 0, 0, 0.9) ;
-    background-image: url() ;
+    background-image: url(https://cdn.discordapp.com/attachments/502505905443831826/516009457403166743/Logopit_1543096624227.png) ;
     border-radius: 5px ;
-    border: 1px solid;
-    animation-name: example;
-    animation-duration: 15s;
-    animation-iteration-count: infinite;
+    border: 3px solid #ff0000;
     position: absolute;
     /*height: 435px !important;*/
     /*width: 300px !important;*/
@@ -498,32 +491,39 @@
 
 div.room-controls--desktop.room-vote--desktop {
     background-color: rgba(0, 0, 0, 0.9);
-    border: 3px solid;
-    animation-name: example;
-    animation-duration: 15s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
+    border-radius: 15px;
+    border: 3px solid #ff0000;
 }
     
 p.community__about {
     background-color: rgba(0, 0, 0, 0.9) ;
     border-radius: 15px;
-    border: 2px solid;
-    animation-name: example;
-    animation-duration: 15s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-}
+    border: 3px solid #ff0000;
+}    
     
     
 button.btn.btn-no-dj-secondary.play.btn-no-dj-secondary__bottom {
     background-color: rgba(0, 0, 0, 0.9) ;
     border-radius: 15px;
-    border: 3px solid;
-    animation-name: example;
-    animation-duration: 15s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-    position: absolute;
+    border: 3px solid #ff0000;
     left: -85px;
 }
+
+    div.community__top {
+    background-color: rgba(0, 0, 0, 0.9) ;
+    border-radius: 5px;
+    border: 3px solid #ff0000;
+}
+
+div.community__playlist--desktop {
+    background-color: rgba(0, 0, 0, 0.9) ;
+    border-radius: 5px;
+    border: 3px solid #ff0000;
+}
+
+#chat {
+    background-color: rgba(0, 0, 0, 0.9) ;
+    border-radius: 5px;
+    border: 3px solid #ff0000;
+}
+
