--- a/Theme.css
+++ b/Theme.css
@@ -498,12 +498,15 @@ p.community__about {
     background-color: rgba(0, 0, 0, 0.9);
 }    
     
-button.btn.btn-no-dj-secondary.play.btn-no-dj-secondary__bottom {
+.btn-no-dj-secondary {
+    border-radius: 50px;
     background-color: rgba(0, 0, 0, 0.9);
+    box-shadow: inset 0 0 10px 1px hsla(0, 0%, 100%, 0.9);
     left: -85px;
+    border: 3px solid #ff0000;
 }
 
-    div.community__top {
+div.community__top {
     background-color: rgba(0, 0, 0, 0.9);
 }
 
@@ -514,3 +517,64 @@ div.community__playlist--desktop {
 #chat {
     background-color: rgba(0, 0, 0, 0.9);
 }
+    
+#playlist-menu .menu .row.selected {
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
+#playlist-panel.playlist--override #media-panel .header .playlist-buttons-container .button#playlist-activate-button {
+    background-color: rgba(0, 0, 0, 0.9);
+    border-radius: 3px;
+    border-color: #0f7ccb;
+    color: #0f7ccb;
+}
+
+#playlist-panel.playlist--override #media-panel .header .playlist-buttons-container .button#playlist-activate-button.active {
+    background-color: rgba(0, 0, 0, 0.9);
+    border-color: #ff0000;
+    color: #ff0000;
+    opacity: 3;
+    border-radius: 3px;
+}
+
+#playlist-panel.playlist--override #media-panel .media-list .jspContainer .jspPane .container-fluid .row.now-playing {
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
+#playlist-panel.playlist--override #media-panel .header .playlist-buttons-container .button#playlist-activate-button.active>i {
+    background-color: rgba(0, 0, 0, 0.9);
+    color: #ff0000;
+}
+
+#playlist-panel.playlist--override #media-panel #playlist-import-panel .import-box .button {
+    background-color: rgba(0, 0, 0, 0.9);
+    border-radius: 3px;
+    color: #fff;
+}
+
+#playlist-panel.playlist--override #media-panel .header .import-button {
+    background-color: rgba(0, 0, 0, 0.9);
+    font-size: 10px;
+    border-radius: 3px;
+    font-weight: 300;
+    color: #fff;
+}
+
+#playlist-panel.playlist--override #media-panel #playlist-import-panel .import-box .button i {
+    background-color: rgba(0, 0, 0, 0.9);
+    display: none;
+}
+
+.community__playlist--desktop[data-song] .icon-playlist {
+    color: #ff0000;
+}
+
+#playlist-activate-button span {
+    background-color: rgba(0, 0, 0, 0.9);
+    color: #ff0000;
+}    
+
+.community .community__song-playing-progress .progress .progress-bar, [data-view=room] .bottom__playback-controls .volume-bar .progress .progress-bar {
+    background-color: #ff0000;
+}
+
