--- a/Theme.css
+++ b/Theme.css
@@ -476,13 +476,12 @@
 }
 
 .user-level-dropdown__level-number .fa, .user-level-dropdown__progress .progress .progress-bar, .btn-level {
-    background-color: #00c6ff;
+    background-color: #ff0000;
     color: #fff;
 }
 
 .btn-level {
-    color: #fff
-;
+    color: #fff;
 }
 
 .user-level-dropdown .user-name {
@@ -493,11 +492,7 @@
 .community .room-controls--desktop {
     background-color: rgba(0, 0, 0, 0.9);
     border: 2px solid #ff0000;
-}
-    
-p.community__about {
-    background-color: rgba(0, 0, 0, 0.9);
-}    
+}  
     
 .btn-no-dj-secondary {
     border-radius: 50px;
@@ -505,18 +500,6 @@ p.community__about {
     box-shadow: inset 0 0 10px 1px hsla(0, 0%, 100%, 0.9);
     left: -85px;
     border: 3px solid #ff0000;
-}
-
-div.community__top {
-    background-color: rgba(0, 0, 0, 0.9);
-}
-
-div.community__playlist--desktop {
-    background-color: rgba(0, 0, 0, 0.9);
-}
-
-#chat {
-    background-color: rgba(0, 0, 0, 0.9);
 }
     
 #playlist-menu .menu .row.selected {
